force-app/main/default/objects/Template__c/Template__c.object-meta.xml
<CustomObject>
    <description>A template from which a new Case can be created.  The template contains default values for certain fields.</description>
    <label>Case Template</label>
    <nameField>
        <label>Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>