force-app/main/default/objects/Template__c/fields/CreateCase__c.field-meta.xml
<CustomField>
    <fullName>CreateCase__c</fullName>
    <formula>HYPERLINK(&quot;/apex/createNewCase?tempID=&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000000GHU9&quot;,&quot;Create Case&quot;),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateCase</label>
    <type>Text</type>
</CustomField>