force-app/main/default/objects/Template__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>NaviGo</fullName>
            </value>
            <value>
                <fullName>HubOps</fullName>
            </value>
            <value>
                <fullName>NMC Account Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>