force-app/main/default/objects/Template__c/fields/NumTotal__c.field-meta.xml
<CustomField>
    <fullName>NumTotal__c</fullName>
    <label>NumTotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>