force-app/main/default/objects/Template__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Stores the name of the object. Like cases.</description>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>