force-app/main/default/objects/Template__c/listViews/AllActiveCaseTemplates.listView-meta.xml
<ListView>
    <fullName>AllActiveCaseTemplates</fullName>
    <columns>NAME</columns>
    <columns>NumTotal__c</columns>
    <columns>CreateCase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Case Templates</label>
    <language>en_US</language>
</ListView>