force-app/main/default/objects/Template__c/listViews/AllCaseTemplates.listView-meta.xml
<ListView>
    <fullName>AllCaseTemplates</fullName>
    <columns>NAME</columns>
    <columns>Folder__c</columns>
    <columns>IsActive__c</columns>
    <columns>NumTotal__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CreateCase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Templates</label>
    <language>en_US</language>
</ListView>